# swagger.json
@@ -279,7 +279,7 @@
         }
       }
     },
-    "/post/get-by-tag-id/{id}": {
+    "/post/get-by-tag-id/{tag_id}": {
       "get": {
         "consumes": [
           "application/json"
@@ -289,7 +289,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "tag_id",
             "type": "integer",
             "in": "path",
             "required": true
@@ -316,7 +316,7 @@
         }
       }
     },
-    "/post/get-by-tag-name/{name}": {
+    "/post/get-by-tag-slug/{tag_slug}": {
       "get": {
         "consumes": [
           "application/json"
@@ -326,7 +326,7 @@
         ],
         "parameters": [
           {
-            "name": "name",
+            "name": "tag_slug",
             "type": "string",
             "in": "path",
             "required": true
@@ -335,7 +335,7 @@
         "tags": [
           "Post Api"
         ],
-        "summary": "Get post by name",
+        "summary": "Get post by Tag slug",
         "description": "",
         "responses": {
           "200": {
@@ -1036,8 +1036,8 @@
                 "name": {
                   "type": "string"
                 },
-                "main_category_id": {
-                  "type": "integer"
+                "description": {
+                  "type": "string"
                 }
               }
             }
@@ -1139,8 +1139,8 @@
                 "name": {
                   "type": "string"
                 },
-                "main_category_id": {
-                  "type": "integer"
+                "description": {
+                  "type": "string"
                 }
               }
             }
@@ -1197,6 +1197,43 @@
             "description": "success",
             "schema": {
               "$ref": "#/definitions/success"
+            }
+          },
+          "500": {
+            "description": "error",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/category/get-by-slug/{slug}": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "slug",
+            "type": "string",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "tags": [
+          "Category Api"
+        ],
+        "summary": "Get Category by Slug",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "success",
+            "schema": {
+              "$ref": "#/definitions/category"
             }
           },
           "500": {
